# iqp-mmd-barren-plateau

./: .gitignore  LICENSE  README.md  ScopeLock.md  TODOS.md  architecture.excalidraw  pyproject.toml  requirements.txt
configs/: base.yaml  hyperparameters.yaml  schema.yaml
docs/: Background and Project Summary.md  Proposal.md  SMART-spec.md  upstream-audit.md
iqp-mmd-barren-plateau-vault/: Anti-Concentration.md  Background and Motivation.md  Barren Plateaus.md  Binary Matrix.md  Binary Mixture Dataset.md  CLI.md  Checkpoint Bridge.md  Checkpoint Export.md  Code MOC.md  Complete Graph Family.md  Config.md  Configs.md  Data Factory.md  Datasets.md  Erdos-Renyi Family.md  Experiments MOC.md  Families MOC.md  Forge Export.md  Forge Runner.md  Gaussian Convention.md  Gaussian Kernel.md  Generator Matrix.md  Generator.md  Glossary.md  Gradient Concentration.md  Gradient Derivation.md  Gradient Variance.md  Gradients Module.md  Home.md  How a Scaling Run Works.md  Hypergraph Families.md  Hypothesis Strategies.md  IQP Circuits.md  IQP Classical Sampling.md  IQP Expectation.md  IQP Model.md  Implementation Choices.md  Initialization Schemes.md  Ising Dataset.md  Kernel Module.md  (+39 more)
notebooks/: 00_sanity_checks.ipynb  01_scaling_plots.ipynb
scripts/: explore_anti_concentration.py  run_scaling.sh  setup_dev.sh
tests/: test_anti_concentration.py  test_expectation_small_n.py  test_gradients_small_n.py  test_hypergraph_families.py  test_hypothesis.py  test_imports.py  test_iqp_mmd_checkpoint_export.py  test_iqp_probability_vector_small_n.py  test_mmd_kernel.py  (+3 more)
(+881 files in other folders)
